tests/snapshots/snapshot_tests__array_init_nondet_vars2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_nondet_vars2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 (* j+0 k+0))) i+0) (+ i+0 (* j+0 k+0)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 (* j+0 k+0))) Z) (Read_Int_Int a+0 Z)))",
    ],
}
