tests/snapshots/snapshot_tests__array_init_pair_symmetr.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_pair_symmetr.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) i+0) x+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) i+0) (* x+0 (- 1)))",
        "(= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int a+0 i+0) (Read_Int_Int b+0 i+0))) i+0) (+ (Read_Int_Int a+0 i+0) (Read_Int_Int b+0 i+0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) 2) (Read_Int_Int b+0 2)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int a+0 i+0) (Read_Int_Int b+0 i+0))) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= i+4 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) i+4) (Read_Int_Int b+0 i+4)))",
    ],
}
